Adjust spacing on the table of contents to be more compact in general but add spacing between agencies that are contain only ‘see’ references and the next agency entry. Ensure FR docs at all levels are left aligned with one another down the page.

--- a/app/assets/stylesheets/application_fonts.css.scss
+++ b/app/assets/stylesheets/application_fonts.css.scss
@@ -118,7 +118,9 @@ body {
     h6 { font-size: modular-scale(0); }
     h7 { font-size: modular-scale(0); }
 
-    h7 { line-height: 1.2; }
+    h4 { line-height: 1.3; }
+    h5, h6, h7 { line-height: 1.2; }
+    h5, h6 { margin-top: 0; }
 
     dl, dt, dd { font-size: modular-scale(0); }
   }
