--- a/app/assets/stylesheets/design/issues/_table_of_contents.css.scss
+++ b/app/assets/stylesheets/design/issues/_table_of_contents.css.scss
@@ -39,9 +39,12 @@
   }
 
   h3 { margin-left: 7px; }
-  h4 {
-    line-height: 1.3 !important;
-    text-transform: none !important;
+  h4 { text-transform: none !important; }
+
+  h5 {
+    // sometimes we're missing a header but we want the spaceing in the
+    // hierarchy to display correctly
+    min-height: 10px;
   }
 
   .fr-box {
@@ -126,6 +129,8 @@
       &.see-references {
         @include apertura-condensed;
         font-size: modular-scale(0);
+
+        + h2 { margin-top: 30px !important; } // add spacing if an agency header follows
       }
     }
   }
@@ -151,6 +156,10 @@
     .toc-editorial-note { margin-left: 10px; }
   }
 
+  .toc-level-3 > .toc-documents .toc-document-metadata {
+    margin-left: -15px;
+  }
+
   .toc-documents {
     font-size: modular-scale(0);
     overflow: hidden;
@@ -164,7 +173,7 @@
 
     .toc-document-metadata,
     .toc-editorial-note {
-      margin-left: 20px;
+      margin-left: 10px;
       a { font-weight: normal; }
     }
 
